--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
-import '../assets/scss/abstracts/_reset.css';
-import '../assets/scss/base/_default.scss';
-import '../assets/scss/base/_general.scss';
-import '../assets/scss/abstracts/_tailwind.css';
+import '../scss/abstracts/_reset.css';
+import '../scss/base/_default.scss';
+import '../scss/base/_general.scss';
+import '../scss/abstracts/_tailwind.css';
 ---
 
 <!doctype html>
@@ -11,6 +11,7 @@ import '../assets/scss/abstracts/_tailwind.css';
 		<meta charset='UTF-8' />
 		<meta name='viewport' content='width=device-width' />
 		<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+		<meta property='og:image' content='/_assets/img/ogp.jpg' />
 		<title>Astro Basics</title>
 	</head>
 	<body>
@@ -19,5 +20,5 @@ import '../assets/scss/abstracts/_tailwind.css';
 </html>
 
 <script>
-	import '../assets/ts/app.js';
+	import '../ts/app.js';
 </script>
