--- a/src/layouts/BeginBody.astro
+++ b/src/layouts/BeginBody.astro
@@ -6,6 +6,6 @@
 		に対応しているブラウザーでアクセスしてください。
 	</p>
 </noscript>
-<a href='#main' class='txtHidden skipLink'>本文へ移動</a>
+<a href="#main" class="txtHidden skipLink">本文へ移動</a>
 
 <!-- GTAG -->
