--- a/src/pages/_parts/_tailwind.astro
+++ b/src/pages/_parts/_tailwind.astro
@@ -16,7 +16,7 @@ import ImageImport from '../../components/ImageImport.astro';
 					/>また設定したものがcss変数としてデフォルトで出力されるので、sassやjsでも同じ変数を使えるようになりました。
 				</p>
 				<div class='grid grid-cols-2 gap-28'>
-					<ImageImport src='/src/img/image.png' />
+					<ImageImport src='/src/img/image.png' sp />
 					<img src='/_assets/img/top/sample.png' alt='' />
 				</div>
 			</div>
