--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,14 +1,19 @@
 ---
-import '../scss/abstracts/_reset.css';
-import '../scss/base/_default.scss';
-import '../scss/base/_general.scss';
-import '../scss/abstracts/_tailwind.css';
-import Head from './Head.astro';
-import Header from './Header.astro';
-import BeginBody from './BeginBody.astro';
-import Footer from './Footer.astro';
-import { common } from '../data/common';
+import "../scss/abstracts/_reset.css";
+import "../scss/base/_default.scss";
+import "../scss/base/_general.scss";
+import "../scss/base/_animation.scss";
+import "../scss/abstracts/_tailwind.css";
+import Head from "./Head.astro";
+import Header from "./Header.astro";
+import BeginBody from "./BeginBody.astro";
+import Footer from "./Footer.astro";
+import { common } from "../data/common"; // グローバルなサイト設定
 
+/**
+ * レイアウトコンポーネントの Props 型定義。
+ * 現在のページ情報
+ */
 interface Props {
 	page: {
 		slug: string;
@@ -22,9 +27,9 @@ const { page } = Astro.props;
 ---
 
 <!doctype html>
-<html dir='ltr' lang='ja'>
+<html dir="ltr" lang="ja">
 	<Head site={common.head} page={page} />
-	<body class={'page-' + page.slug}>
+	<body class={"page-" + page.slug}>
 		<BeginBody />
 		<Header
 			siteName={common.head.siteName}
@@ -32,7 +37,7 @@ const { page } = Astro.props;
 			menu={common.menu}
 			slug={page.slug}
 		/>
-		<main id='main'>
+		<main id="main">
 			<slot />
 		</main>
 		<Footer copyright={common.head.copyright} />
@@ -40,10 +45,10 @@ const { page } = Astro.props;
 </html>
 
 <script>
-	import '../ts/app.js';
+	import "../ts/app.js";
 </script>
 <script
-	src='//cdn.jsdelivr.net/npm/@oddbird/popover-polyfill@0.3.8/dist/popover.iife.min.js'
+	src="//cdn.jsdelivr.net/npm/@oddbird/popover-polyfill@0.3.8/dist/popover.iife.min.js"
 	integrity='sha256-e4nHKzmwysJ3lb8GTURv5YrPqNFQ7xNcYzn/xop4K+0='
 	crossorigin='anonymous'
 	defer></script>
